Fix styling to be closer to the default for search boxes
This still has an issue with overflows and how the browser will
completely shift focus rather than slowly move it character by
character, but this is something which we can work out at a later
time and shouldn't break things for now.

--- a/src/scss/_multiple.scss
+++ b/src/scss/_multiple.scss
@@ -31,6 +31,12 @@
     margin-left: 5px;
     padding: 0;
     max-width: 100%;
+    resize: none;
+    height: 18px;
+    vertical-align: bottom;
+    font-family: sans-serif;
+    overflow: hidden;
+    word-break: keep-all;
 
     &::-webkit-search-cancel-button {
       -webkit-appearance: none;
